--- a/styles.css
+++ b/styles.css
@@ -5,15 +5,15 @@ html {
 body {
   height: 100%;
   margin: 0;
-  font-family: "Roboto";
+  font-family: 'Roboto';
 }
 
 body::before {
   display: block;
-  content: "";
+  content: '';
   height: 40%;
   min-height: 200px;
-  background-image: url("/assets/me-xs.jpg"),
+  background-image: url('/assets/me-xs.jpg'),
     linear-gradient(to right, #d4f2fd 0%, #ade3fb 100%);
   background-repeat: no-repeat;
   background-size: contain, cover;
@@ -36,10 +36,18 @@ h3 {
   margin: 0;
 }
 
+.header {
+  display: flex;
+  justify-content: center;
+  height: 50px;
+  flex-shrink: 0;
+}
+
 .links {
   display: flex;
   justify-content: space-between;
   flex-shrink: 0;
+  flex-grow: 1;
 }
 
 .link,
@@ -52,19 +60,23 @@ h3 {
   display: none;
 }
 
+p {
+  max-width: 550px;
+}
+
 .wrapper {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   font-weight: 300;
-  padding: 10px;
+  padding: 16px;
 }
 
 footer {
   display: flex;
   justify-content: flex-end;
   height: 30px;
-  margin-bottom: 10px;
+  margin-bottom: 16px;
   flex-shrink: 0;
 }
 
@@ -73,11 +85,11 @@ footer {
   color: dimgrey;
   font-weight: 300;
   font-size: 10px;
-  margin-right: 5px;
+  margin-right: 8px;
 }
 
-.footer-link::before {
-  content: " | ";
+.footer-link:not(:first-of-type)::before {
+  content: ' | ';
 }
 
 @media all and (min-width: 350px) {
@@ -100,7 +112,7 @@ footer {
     width: 40%;
     height: 100%;
     flex-shrink: 0;
-    background-image: url("/assets/me.jpg");
+    background-image: url('/assets/me.jpg');
     background-size: cover;
     background-position: top;
   }
@@ -108,11 +120,25 @@ footer {
   .wrapper {
     position: absolute;
     height: 100%;
-    padding-right: calc(40% + 10px);
+    padding-right: calc(40% + 16px);
     overflow-y: auto;
+  }
+
+  .header {
+    justify-content: flex-end;
+  }
+
+  .links {
+    max-width: 300px;
   }
 
   footer {
     justify-content: flex-start;
+  }
+}
+
+@media all and (min-width: 1100px) {
+  .wrapper {
+    padding-right: calc(40% + 48px);
   }
 }
