--- a/styles.css
+++ b/styles.css
@@ -54,10 +54,17 @@ h3 {
 .link:active {
   color: darkslateblue;
   text-decoration: none;
+  display: flex;
+}
+
+.link__svgicon {
+  width: 16px;
+  height: 16px;
 }
 
 .link__text {
   display: none;
+  margin-left: 2px;
 }
 
 p {
@@ -129,7 +136,7 @@ footer {
   }
 
   .links {
-    max-width: 300px;
+    max-width: 400px;
   }
 
   footer {
